--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: rgb(17, 17, 72);
+    background-color: rgb(88, 88, 135);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container{
@@ -9,10 +10,21 @@ body{
     border: 1px solid white;
 }
 .clear-delete{
+    background-color: blue;
     display: flex;
     justify-content: space-around;
-    margin-top: 15px;
+    margin: 0 auto;
 
+}
+
+.clear-delete button{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: yellow;
+    width: 50%;
+    height: 40px;
+}
+.clear-delete button:hover{
+    filter: brightness(85%);
 }
 
 #display{
@@ -20,16 +32,29 @@ body{
     width: 100%;
     background-color: white;
     text-align: right;
+    font-size: 3rem;
 }
 .operators{
-    margin-top: 15px;
+    margin-top: 0;
     display: flex;
     flex-wrap: wrap;
 }
+.numero{
+    background-color: aquamarine;
+}
+.operador{
+    background-color: rgb(255, 181, 43);
+}
 
 .operators button{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: larger;
     width: 25%;
     height: 50px;
     margin: 0;
     border: 1px solid rgb(9, 9, 37);
+}
+
+.operators button:hover{
+    filter: brightness(85%);
 }
