--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     background-color: yellow;
     width: 50%;
     height: 40px;
+    border: 1px solid black;
 }
 .clear-delete button:hover{
     filter: brightness(85%);
